--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <th>Informação</th>
         </tr>
         <tr>
-            <td>João</td>
+            <td>Pedro</td>
             <td>25</td>
             <td>Sou estudante</td>
         </tr>
